Ajuste: Depuración del código

--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -27,7 +27,7 @@
     </div>
   </div>
 </div>
-<p-dialog header="Extracción de datos" [(visible)]="display" [resizable]="false" (onHide)="onHideDialogExtract()"
+<p-dialog header="Extracción de datos" [(visible)]="displayExtract" [resizable]="false" (onHide)="onHideDialogExtract()"
   [positionTop]="0">
   <div id="infoDiv">
     <p>1. Defina el área de interés</p>
