Ajuste: Generacion de excel con los features del layer seleccionado

--- a/src/app/map-viewer/map-viewer.component.css
+++ b/src/app/map-viewer/map-viewer.component.css
@@ -85,6 +85,10 @@ p-sidebar {
     clear: both;
 }
 
+#excel {
+    margin-left: 90% !important;
+}
+
 @media print {
     ::ng-deep .esri-component {
         display: none !important;
