Ajuste: Ajuste search

--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -168,8 +168,10 @@
 
     <h3>
       <div class="title-help">
-        <i class="pi pi-comment" style="font-size: 2em"></i>
-        <span>Bienvenido al Geovisor ANH</span>
+        <span>
+          <i class="pi pi-comment" style="font-size: 2em"></i>
+          <span>Bienvenido al Geovisor ANH</span>
+        </span>
       </div>
       <div class="body-help">
         Puedes <b>hacer clic</b> sobre los elementos de tu interés en el mapa o... <ul>
