--- a/src/app/map-viewer/map-viewer.component.css
+++ b/src/app/map-viewer/map-viewer.component.css
@@ -192,6 +192,7 @@ p-sidebar {
 
 #help {
   background-color: white;
+  width: 272px;
 }
 
 .title-help {
@@ -199,16 +200,22 @@ p-sidebar {
   border-bottom-color: #D5DDE8;
   color: #FFFFFF;
   text-shadow: none;
-  width: 274px;
+  display: grid;
+  grid-template-columns: auto auto;
+  margin: 0 auto;
+}
+
+.title-help .icon {
+  margin: auto auto;
 }
 
 .body-help {
   padding: 9px 14px;
-  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  /* font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif; */
   font-size: 12.5px;
 }
 
-.p-col {
+.p-dir-col .p-col {
   margin: 0 auto;
 }
 
