--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -165,31 +165,42 @@
 <!-- Div contenedor del widget de ayuda -->
 <div id="help" class="esri-widget">
   <div *ngIf="loadLayers == 10">
-
-    <h3>
-      <div class="title-help">
+    <!-- <h3>
+      <div class="title-help p-grid">
+        <div class="p-col-1">
+          <i class="pi pi-comment" style="font-size: 1.5em"></i>
+        </div>
+        <div class="p-col-11">
+          <span>Bienvenido al Geovisor ANH</span>
+        </div>
+      </div>
+    </h3> -->
+    <div class="title-help">
+      <div class="icon">
         <i class="pi pi-comment" style="font-size: 2em"></i>
-        <span>Bienvenido al Geovisor ANH</span>
       </div>
-      <div class="body-help">
-        Puedes <b>hacer clic</b> sobre los elementos de tu interés en el mapa o... <ul>
-          <li> <b>Encuentra arriba</b> lo que buscas.</li>
-          <li> <b>Usa las herramientas</b> del menú de arriba a la izquierda.</li>
-          <li> Selecciona a la derecha <b>la capa de trabajo</b>, controla <b>transparencia</b> y ve las <b>convenciones
-              del mapa</b> y <b>atributos de los elementos</b> seleccionados.</li>
-        </ul>
+      <div>
+        <h3>Bienvenido al Geovisor ANH</h3>
       </div>
-      <div class="p-grid p-dir-col">
-        <div class="p-col">
-          <button pButton type="button" label="Abrir Guía del Usuario" class="ui-button-raised" icon="fa fa-book-open"
-            (click)="onShowGuide()"></button>
-        </div>
-        <div class="p-col">
-          <button pButton type="button" label="Acerca de Geovisor ANH" class="ui-button-raised ui-button-secondary"
-            icon="pi pi-info-circle" (click)="onShowAbout()"></button>
-        </div>
+    </div>
+    <div class="body-help">
+      Puedes <b>hacer clic</b> sobre los elementos de tu interés en el mapa o... <ul>
+        <li> <b>Encuentra arriba</b> lo que buscas.</li>
+        <li> <b>Usa las herramientas</b> del menú de arriba a la izquierda.</li>
+        <li> Selecciona a la derecha <b>la capa de trabajo</b>, controla <b>transparencia</b> y ve las <b>convenciones
+            del mapa</b> y <b>atributos de los elementos</b> seleccionados.</li>
+      </ul>
+    </div>
+    <div class="p-grid p-dir-col">
+      <div class="p-col">
+        <button pButton type="button" label="Abrir Guía del Usuario" class="ui-button-raised" icon="fa fa-book-open"
+          (click)="onShowGuide()"></button>
       </div>
-    </h3>
+      <div class="p-col">
+        <button pButton type="button" label="Acerca de Geovisor ANH" class="ui-button-raised ui-button-secondary"
+          icon="pi pi-info-circle" (click)="onShowAbout()"></button>
+      </div>
+    </div>
   </div>
 </div>
 <!-- Fin del div contenedor del widget de ayuda -->
