Ajuste: Cambio de imagen para diseño y desarrollo y cambio de color en widget de ayuda

--- a/src/app/dialog-about/dialog-about.component.html
+++ b/src/app/dialog-about/dialog-about.component.html
@@ -11,9 +11,9 @@
   </div>
   <div class="design">
     Diseño y Desarrollo <br>
-    <img src="../../assets/logo-utp.png">
+    <img src="assets/logo-sueje.png">
     <br>
-    <a href="https://utp.edu.co">UTP</a>
+    <a href="http://www.sueje.edu.co/" target="_blank">SUEJE</a>
   </div>
 </div>
 <p-message id="infoMedicion" severity="info" text="Versión del Geovisor y Datos del Desarrollador <br>
