--- a/src/app/map-viewer/map-viewer.component.css
+++ b/src/app/map-viewer/map-viewer.component.css
@@ -196,7 +196,7 @@ p-sidebar {
 }
 
 .title-help {
-  background-color: #3F79B6;
+  background-color: #007AD8;
   border-bottom-color: #D5DDE8;
   color: #FFFFFF;
   text-shadow: none;
