--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -1,9 +1,9 @@
 <p-toast></p-toast>
 <!-- Empieza sidebar-menu -->
-<p-sidebar [(visible)]="visibleMenu" [modal]="false" [baseZIndex]="10" [style]="{width:'200px'}">
+<p-sidebar [(visible)]="visibleMenu" [modal]="false" [baseZIndex]="10" [style]="{width:'200px', 'height': 'auto'}">
   <img src="logo-anh-p.png" (click)="visibleMenu = false">
   <div style="overflow-y: auto;">
-    <p-panelMenu [model]="menu" [style]="{'width':'100%', 'height': '550px'}" [multiple]="false"></p-panelMenu>
+    <p-panelMenu [model]="menu" [style]="{'width':'100%', 'height': 'auto'}" [multiple]="false"></p-panelMenu>
   </div>
 </p-sidebar>
 <!-- Finaliza sidebar-menu -->
