Ajuste: Cambio de ícono

--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -168,7 +168,7 @@
   <div *ngIf="loadLayers == 10">
     <div class="title-help">
       <div class="icon">
-        <i class="pi pi-comment" style="font-size: 2em"></i>
+        <i class="esri-icon-comment" style="font-size: 1.5em"></i>
       </div>
       <div>
         <h3>Bienvenido al Geovisor ANH</h3>
