Ajuste: Cambio en marcador de coordenada

--- a/src/app/map-viewer/map-viewer.component.css
+++ b/src/app/map-viewer/map-viewer.component.css
@@ -211,7 +211,7 @@ p-sidebar {
 
 .body-help {
   padding: 9px 14px;
-  /* font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif; */
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 12.5px;
 }
 
