Ajuste: Control de ajustar tamaño controlado

--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -197,7 +197,7 @@
 <!-- Fin del div contenedor del widget de ayuda -->
 
 <!-- Modal de acerca de -->
-<p-dialog header="Acerca de..." [(visible)]="about">
+<p-dialog header="Acerca de..." [(visible)]="about" [resizable]="false">
   <app-dialog-about></app-dialog-about>
 </p-dialog>
 <!-- Fin del modal de acerca de -->
