--- a/src/app/map-viewer/map-viewer.component.css
+++ b/src/app/map-viewer/map-viewer.component.css
@@ -5,7 +5,9 @@
     background-repeat: no-repeat;
     width: 160px;
     padding: 29px;
+    margin-top: 5px;
     height: 54px;
+    border: none;
 }
 
 #menu-info {
@@ -13,8 +15,11 @@
     background: #ffffff;
     text-align: center;
     position: absolute;
-    width: 160px;
-    height: 54px;
+    width: 190px;
+}
+
+#logomenu img{
+    margin-left: 20px;
 }
 
 #panel-selected-layer {
@@ -44,6 +49,149 @@
     border-radius: 5px;
 }
 
+@media only screen and (max-width: 991px) {
+    #menu-info:before {
+        border-top: 3px solid rgb(255, 237, 0);
+        border-bottom: 3px solid rgb(254, 204, 0);
+        height: 5px;
+        width: 18px;
+        content: "";
+        position: absolute;
+        z-index: 11;
+        top: 13px;
+        left: 4px;
+        -webkit-transition: all 0.1s ease;
+        transition: all 0.1s ease;
+        -o-transition: none;
+        -webkit-box-sizing: content-box;
+        -moz-box-sizing: content-box;
+        box-sizing: content-box;
+    }
+
+    #menu-info:after {
+        border-top: 3px solid rgb(240, 125, 0);
+        border-bottom: 3px solid rgb(227, 6, 19);
+        content: "";
+        height: 5px;
+        width: 18px;
+        position: absolute;
+        top: 19px;
+        left: 4px;
+        -webkit-transition: all 0.1s ease;
+        transition: all 0.1s ease;
+        -o-transition: none;
+        -webkit-box-sizing: content-box;
+        -moz-box-sizing: content-box;
+        box-sizing: content-box;
+    }
+}
+
+#menu-info:before {
+    border-top: 3px solid rgb(255, 237, 0);
+    border-bottom: 3px solid rgb(254, 204, 0);
+    height: 5px;
+    width: 18px;
+    content: "";
+    position: absolute;
+    z-index: 11;
+    top: 13px;
+    left: 4px;
+    -webkit-transition: all 0.1s ease;
+    transition: all 0.1s ease;
+    -o-transition: none;
+    -webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
+    box-sizing: content-box;
+}
+
+#menu-info:after {
+    border-top: 3px solid rgb(240, 125, 0);
+    border-bottom: 3px solid rgb(227, 6, 19);
+    content: "";
+    height: 5px;
+    width: 18px;
+    position: absolute;
+    top: 19px;
+    left: 4px;
+    -webkit-transition: all 0.1s ease;
+    transition: all 0.1s ease;
+    -o-transition: none;
+    -webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
+    box-sizing: content-box;
+}
+
+@media only screen and (max-width: 991px) {
+    #logomenu:before {
+        border-top: 1px solid rgb(255, 237, 0);
+        border-bottom: 1px solid rgb(254, 204, 0);
+        height: 2px;
+        width: 18px;
+        content: "";
+        position: absolute;
+        z-index: 11;
+        top: 13px;
+        left: 4px;
+        -webkit-transition: all 0.1s ease;
+        transition: all 0.1s ease;
+        -o-transition: none;
+        -webkit-box-sizing: content-box;
+        -moz-box-sizing: content-box;
+        box-sizing: content-box;
+    }
+
+    #logomenu:after {
+        border-top: 1px solid rgb(240, 125, 0);
+        border-bottom: 1px solid rgb(227, 6, 19);
+        content: "";
+        height: 2px;
+        width: 18px;
+        position: absolute;
+        top: 19px;
+        left: 4px;
+        -webkit-transition: all 0.1s ease;
+        transition: all 0.1s ease;
+        -o-transition: none;
+        -webkit-box-sizing: content-box;
+        -moz-box-sizing: content-box;
+        box-sizing: content-box;
+    }
+}
+
+#logomenu:before {
+    border-top: 1px solid rgb(255, 237, 0);
+    border-bottom: 1px solid rgb(254, 204, 0);
+    height: 2px;
+    width: 18px;
+    content: "";
+    position: absolute;
+    z-index: 11;
+    top: 13px;
+    left: 4px;
+    -webkit-transition: all 0.1s ease;
+    transition: all 0.1s ease;
+    -o-transition: none;
+    -webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
+    box-sizing: content-box;
+}
+
+#logomenu:after {
+    border-top: 1px solid rgb(240, 125, 0);
+    border-bottom: 1px solid rgb(227, 6, 19);
+    content: "";
+    height: 2px;
+    width: 18px;
+    position: absolute;
+    top: 19px;
+    left: 4px;
+    -webkit-transition: all 0.1s ease;
+    transition: all 0.1s ease;
+    -o-transition: none;
+    -webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
+    box-sizing: content-box;
+}
 /* Handle on hover */
 
 ::-webkit-scrollbar-thumb:hover {
