--- a/src/app/map-viewer/map-viewer.component.css
+++ b/src/app/map-viewer/map-viewer.component.css
@@ -3,20 +3,38 @@
     background: #ffffff;
     background-image: url("../../assets/logo-anh-p.png");
     background-repeat: no-repeat;
-    width: 160px;
+    /* width: 160px;
     padding: 29px;
     margin-top: 5px;
+    border: none; */
     height: 54px;
-    border: none;
+
+    width: 154px;
+    margin-left: 12px;
 }
 
 #menu-info {
-    z-index: 5;
-    background: #ffffff;
-    text-align: center;
-    position: absolute;
-    width: 190px;
+  z-index: 5;
+  background: #ffffff;
+  /* text-align: center; */
+  position: absolute;
+  width: 190px;
 }
+
+/* #region  Accordion*/
+::ng-deep .ui-accordion .ui-accordion-content {
+  padding: 0 !important;
+}
+
+::ng-deep :focus {
+  outline: unset !important;
+}
+
+::ng-deep .ui-accordion .ui-accordion-header a, .ui-accordion .ui-accordion-header:not(.ui-state-disabled).ui-state-active a{
+  background-color: white !important;
+  border-color: #c8c8c8 !important;
+}
+/* #endregion */
 
 #logomenu img{
     margin-left: 20px;
