--- a/src/app/map-viewer/map-viewer.component.css
+++ b/src/app/map-viewer/map-viewer.component.css
@@ -7,10 +7,10 @@
     padding: 29px;
     margin-top: 5px;
     border: none; */
-    height: 54px;
+    /* height: 54px; */
 
-    width: 154px;
-    margin-left: 12px;
+    height: 73px;
+    width: 188px;
 }
 
 #menu-info {
@@ -28,6 +28,10 @@
 
 ::ng-deep :focus {
   outline: unset !important;
+}
+
+::ng-deep .ui-accordion .ui-accordion-header a{
+  padding: 0 !important;
 }
 
 ::ng-deep .ui-accordion .ui-accordion-header a, .ui-accordion .ui-accordion-header:not(.ui-state-disabled).ui-state-active a{
