--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -185,10 +185,10 @@
   <div *ngIf="view.ready">
     <div class="title-help">
       <div class="icon">
-        <i class="esri-icon-comment" style="font-size: 1.5em"></i>
+        <i class="pi pi-comment" style="font-size: 2em"></i>
       </div>
-      <div>
-        <h3>Bienvenido al Geovisor ANH</h3>
+      <div class="title-text">
+        <h4>Bienvenido al Geovisor ANH</h4>
       </div>
     </div>
     <div class="body-help">
