Ajuste: Se cambia diseño de botónes measurement

--- a/src/app/dialog-about/dialog-about.component.html
+++ b/src/app/dialog-about/dialog-about.component.html
@@ -6,7 +6,7 @@
     Copyright © 2013-2020
   </div>
   <div class="image">
-    <img src="logo-anh-p.png">
+    <img src="assets/logo-anh-p.png">
     <br>Vicepresidencia Técnica
   </div>
   <div class="design">
