Ajuste: Se soluciona error de display en función Imprimir

--- a/src/app/map-viewer/map-viewer.component.css
+++ b/src/app/map-viewer/map-viewer.component.css
@@ -317,6 +317,10 @@ p-sidebar {
     #menu {
         display: none;
     }
+
+    #menu-info {
+      display: none;
+    }
     #ts-tierras-wrapper {
         display: none;
     }
