Ajuste: Tooltip para botón de exportar a excel

--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -175,7 +175,7 @@
       </tr>
     </ng-template>
     <ng-template pTemplate="summary">
-      <button pButton icon="fas fa-file-excel" id="excel" (click)="generateExcelFeaturesLayer()"></button>
+      <button pButton icon="fas fa-file-excel" id="excel" pTooltip="Exportar a Excel" (click)="generateExcelFeaturesLayer()"></button>
     </ng-template>
   </p-table>
 </p-dialog>
