Ajuste: Cambio en dirección de imagen

--- a/src/app/dialog-terminos/dialog-terminos.component.html
+++ b/src/app/dialog-terminos/dialog-terminos.component.html
@@ -3,7 +3,7 @@
     <h2>Geovisor ANH v3.0</h2>
     <h4>Terminos y Condiciones</h4>
   </div>
-  <img src="logo-anh-p.png">
+  <img src="assets/logo-anh-p.png">
 </div>
 <div id="body">
   <p>
